# haiku-search

./: Cargo.toml  LICENSE_MIT  README.md  benchmark.js  index.html
.devcontainer/: devcontainer.json
.github/workflows/: ci.yaml
pkg/: haiku.d.ts  haiku.js  haiku_bg.wasm  haiku_bg.wasm.d.ts  package.json
src/: lib.rs
tests/: web.rs
