[package]
name = "haiku"
version = "0.1.0"
authors = ["Luis Cardoso <luis@luiscardoso.dev>"]
edition = "2021"
description = "A fast and memory-efficient fuzzy search library for text documents."
readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/beowolx/haiku"
keywords = ["fuzzy", "search", "text", "document"]
categories = ["fuzzy", "search", "text", "document"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.84"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
opt-level = "s"
